--- a/public/assets/sass/style.css
+++ b/public/assets/sass/style.css
@@ -3319,9 +3319,9 @@ label {
 .cs_site_branding {
   display: inline-block;
 }
-.cs_site_branding img {
+/* .cs_site_branding img {
   max-height: 45px;
-}
+} */
 
 @media screen and (min-width: 1200px) {
   .cs_nav_list.cs_color_1 {
@@ -3750,9 +3750,9 @@ label {
   .cs_hamburger_wrap .cs_hamburger {
     margin-right: 0;
   }
-  .cs_site_branding img {
+  /* .cs_site_branding img {
     max-height: 32px;
-  }
+  } */
   .cs_site_header.cs_style1 .cs_btn span {
     display: none;
   }
