--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -4020,9 +4020,9 @@ label {
     .cs_hamburger_wrap .cs_hamburger {
         margin-right: 0;
     }
-    .cs_site_branding img {
+    /* .cs_site_branding img {
         max-height: 32px;
-    }
+    } */
     .cs_site_header.cs_style1 .cs_btn span {
         display: none;
     }
