--- a/public/assets/sass/common/_header.scss
+++ b/public/assets/sass/common/_header.scss
@@ -827,9 +827,9 @@
     .cs_hamburger_wrap .cs_hamburger {
         margin-right: 0;
     }
-    .cs_site_branding img {
-        max-height: 32px;
-    }
+    // .cs_site_branding img {
+    //     max-height: 32px;
+    // }
     .cs_site_header.cs_style1 .cs_btn {
         span {
             display: none;
